tests/typing/fail/tuple_arg_nested_star_fail2.rb

def f() yield [1,2,true] end
f {|(x,*y)| y[1] + 2}
